# NOTE: The CDK dependencies are managed with NPM, these are for the inner docker folder Python deps

[tool.poetry]
name = "aws-cdk-sonarqube-ec2"
version = "0.0.1"
description = "SonarQube deployment on EC2 Instances and IaC on AWS-CDK."
authors = ["Santiago Garcia Arango <san99tiago@gmail.com>"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aws-cdk-lib = "2.93.0"
constructs = ">=10.0.0,<11.0.0"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.20.0"
pytest = "^7.3.2"
pytest-mock = "^3.11.1"
coverage = "^7.2.7"
boto3 = "^1.28.51"
moto = "^4.2.3"

[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = [
    "cdk",
    "docker/scanner-setup",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
deploy = "cdk deploy --require-approval never"
test-unit = ["_test_unit", "_coverage_html", "_coverage_xml"]
_test_unit = "coverage run -m pytest tests/unit"
_coverage_html = "coverage html"
_coverage_xml = "coverage xml"


[tool.coverage.run]
branch = true
relative_files = true
source = ["cdk", "docker/scanner-setup/src"]
omit = [
    "**/__init__.py"
]

[tool.coverage.report]
show_missing = false
